# ninja-plugin

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  QUICKSTART.md  README.md  SECURITY_AND_TRUST.md  TESTING_OBS_MANUAL.md  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  clang-format.yml  live-e2e.yml  release.yml
data/locale/: en-US.ini
docs/: index.html
scripts/: install-linux.sh  install-macos.sh  install-package-linux.sh  install-package-macos.sh  install-package-windows.ps1  install-windows.ps1  uninstall-package-linux.sh  uninstall-package-macos.sh  uninstall-package-windows.ps1
src/: plugin-main.cpp  plugin-main.h  vdoninja-common.h  vdoninja-data-channel.cpp  vdoninja-data-channel.h  vdoninja-output.cpp  vdoninja-output.h  vdoninja-peer-manager.cpp  vdoninja-peer-manager.h  vdoninja-signaling.cpp  vdoninja-signaling.h  vdoninja-source.cpp  vdoninja-source.h  vdoninja-utils.cpp  vdoninja-utils.h
tests/: test-data-channel.cpp  test-json.cpp  test-utils.cpp
tests/stubs/: obs-module.h  obs-stubs.cpp
